// Tabel Angkatan
Table generations {  
  id int [pk]  
  name varchar     
}  

// Tabel Pengguna 
Table users {  
  id int [pk]  
  name varchar  
  identity varchar  
  secondary_identitiy varchar
  password varchar  
  email varchar  
  phone varchar  
  profile_image varchar  
  generation_id int [ref: > generations.id]  
  role_id int [ref: > roles.id]     
}  

// Tabel Role 
Table roles {  
  id int [pk]  
  name varchar     
}  

// Tabel Periode
Table periods {  
  id int [pk]  
  name varchar  
  start_date date  
  end_date date  
  is_active boolean [default: true]  
  generation_id int [ref: > generations.id]  
  type enum('proposal', 'thesis')    
}  

// Tabel Rubrik 
Table rubrics {  
  id int [pk]  
  name varchar
  type enum('proposal', 'thesis', 'guidance')
}  

// Tabel Unsur Rubrik
Table criterias {  
  id int [pk]  
  name varchar  
  weight double   
  has_sub boolean 
  rubric_id int [ref: > rubrics.id]
}

// Tabel Sub Unsur Rubrik
Table sub_criterias {  
  id int [pk]  
  name varchar  
  weight double   
  criteria_id int [ref: > criterias.id]
}

// Tabel Proposal
Table proposals {  
  id int [pk]  
  title varchar  
  document longtext
  support_document longtext
  is_editable boolean
  status enum('menunggu', 'disetujui', 'ditolak')
  student_id int [ref: > users.id]
  primary_mentor_id int [ref: > users.id]
  secondary_mentor_id int [ref: > users.id]
  period_id int [ref: > periods.id]
}

// Tabel Tugas Akhir
Table thesis {
  id int [pk]  
  title varchar  
  document longtext
  support_document longtext
  is_editable boolean
  student_id int [ref: > users.id]
  status enum('menunggu', 'disetujui', 'ditolak')
  period_id int [ref: > periods.id]
}

// Tabel Ujian
Table exams {
  id int [pk]
  exam_date date
  start_time datetime
  end_time datetime
  room varchar
  is_editable boolean
  type enum('proposal', 'thesis')
  student_id int [ref: > users.id]
  primary_examiner_id int [ref: > users.id]
  secondary_examiner_id int [ref: > users.id]
  tertiary_examiner_id int [ref: > users.id]
}

// Tabel Penilaian Ujian
Table assessments {
  id int [pk]
  exam_id int [ref: > exams.id]
  rubric_id int [ref: > rubrics.id]
  student_id int [ref: > users.id]
  examiner_id int [ref: > users.id]
}

// Table Nilai Ujian
Table scores {
  id int [pk]
  score double
  has_sub boolean
  assessment_id int [ref: > assessments.id]
  criteria_id int [ref: > criterias.id]
}

// Table Nilai Ujian (Sub)
Table sub_scores {
  id int [pk]
  score double
  score_id int [ref: > scores.id]
  sub_criteria_id int [ref: > sub_criterias.id]
}

Table questions {
  id int [pk]
  question varchar
  weight double
  assessment_id int [ref: > assessments.id]
}

Table revisions {
  id int [pk]
  description varchar
  chapter varchar
  page varchar
  assessment_id int [ref: > assessments.id]
}